--- a/index.html
+++ b/index.html
@@ -1,52 +1,49 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sitemiz Bakımda</title>
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(135deg, #ffb6c1, #ff69b4);
-      font-family: "Poppins", sans-serif;
-      color: #fff;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 3em;
-      margin-bottom: 0.3em;
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
-    }
-
-    p {
-      font-size: 1.2em;
-      opacity: 0.9;
-    }
-
-    .loader {
-      margin-top: 2em;
-      width: 60px;
-      height: 60px;
-      border: 6px solid rgba(255, 255, 255, 0.4);
-      border-top-color: white;
-      border-radius: 50%;
-      animation: spin 1.2s linear infinite;
-    }
-
-    @keyframes spin {
-      to { transform: rotate(360deg); }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>novaNW - Yapım Aşamasında</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            text-align: center;
+        }
+        .container {
+            padding: 40px;
+            border: 2px solid #ccc;
+            border-radius: 10px;
+            background-color: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #007bff; /* Mavi renk */
+            font-size: 2.5em;
+            margin-bottom: 10px;
+        }
+        p {
+            font-size: 1.2em;
+        }
+        .logo-text {
+            font-style: italic;
+            font-weight: bold;
+            color: #555;
+        }
+    </style>
 </head>
 <body>
-  <h1>Sitemiz Şu An Bakımda 🛠️</h1>
-  <p>Kısa süre içinde tekrar aktif olacağız. Anlayışınız için teşekkür ederiz 💖</p>
-  <div class="loader"></div>
+    <div class="container">
+        <h1>Yapım Aşamasında</h1>
+        <p>Merhaba! <span class="logo-text">novaNW</span> için harika bir site hazırlıyoruz.</p>
+        <p>Yakında daha iyi bir deneyimle karşınızda olacağız.</p>
+        <p>Sabrınız için teşekkür ederiz.</p>
+    </div>
 </body>
 </html>
