Add TikTok link and styles to index.html
Added TikTok link and associated styles to the page.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>novaNW - Yapım Aşamasında</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -36,6 +37,23 @@
             font-weight: bold;
             color: #555;
         }
+        /* TikTok bağlantısı için stil */
+        .tiktok-link {
+            display: inline-block;
+            margin-top: 20px;
+            text-decoration: none; /* Alt çizgiyi kaldırır */
+            color: #000; /* Yazı rengi */
+            font-size: 1.2em;
+            transition: color 0.3s;
+        }
+        .tiktok-link:hover {
+            color: #fe2c55; /* Fare üzerine gelince TikTok rengi */
+        }
+        .fa-tiktok {
+            color: #000;
+            margin-right: 8px;
+            font-size: 1.5em; /* İkon boyutu */
+        }
     </style>
 </head>
 <body>
@@ -44,6 +62,11 @@
         <p>Merhaba! <span class="logo-text">novaNW</span> için harika bir site hazırlıyoruz.</p>
         <p>Yakında daha iyi bir deneyimle karşınızda olacağız.</p>
         <p>Sabrınız için teşekkür ederiz.</p>
+
+        <a href="https://www.tiktok.com/@wuffymucuk" target="_blank" class="tiktok-link">
+            <i class="fab fa-tiktok"></i> @wuffymucuk
+        </a>
     </div>
 </body>
-</html>
+    </html>
+    
